Fixing problems with image urls